The site displays correctly on mobile (#863)

--- a/src/components/L2/Dropdowns/AccountsDropdown.scss
+++ b/src/components/L2/Dropdowns/AccountsDropdown.scss
@@ -83,6 +83,7 @@
   line-height: 24px;
   position: relative;
   width: 368px;
+  max-width: 100%;
 
   .close {
     position: absolute;
