--- a/src/components/SigilMini.scss
+++ b/src/components/SigilMini.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  white-space: nowrap;
 
   &:hover {
     transform: scale(1.02);
