--- a/src/views/Login/LoginSelector.scss
+++ b/src/views/Login/LoginSelector.scss
@@ -74,6 +74,7 @@
     padding: 24px;
     font-size: 14px;
     line-height: 24px;
+    max-width: 100%;
   }
 
   .master-ticket {
