--- a/src/views/Point/Point.scss
+++ b/src/views/Point/Point.scss
@@ -6,6 +6,7 @@
   line-height: 24px;
   position: relative;
   width: 368px;
+  max-width: 100%;
 
   .title {
     font-weight: 700;
